# au-flights-gtfs

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
notebooks/: build_au_flights_gtfs.ipynb
src/au_flights_gtfs/: __init__.py  __main__.py  airlines.py  airports.py  builder.py  cli.py  config.py  models.py  sources.py
tests/: test_builder.py
